[package]
name = "Rlicker"
version = "0.1.0"
edition = "2021"

[dependencies]
fltk  = { version = "1", features = ["fltk-bundled"] }
evdev = "0.12"
rand = "0.8"
libc = "0.2"

[profile.release]
opt-level = 3
lto        = "fat"
strip      = true
codegen-units = 1
panic      = "abort"

[package.metadata.appimage]
auto_link = true

[package.metadata.appimage.bundle]
name = "Rlicker"
icon = "assets/icon.png"
